--- a/index.html
+++ b/index.html
@@ -2,24 +2,54 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
+    <style>
+        body {
+            background-color: #f4f4f4;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #1e1e1e;
+            color: white;
+            padding: 20px 0;
+        }
+        nav a {
+            margin: 10px;
+            text-decoration: none;
+            color: #1e90ff;
+            font-weight: bold;
+        }
+        img {
+            margin-top: 20px;
+            width: 300px;
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Personal Webpage</h1>
-    <p>Hello! I'm Yvon Tsafack, and this is my personal webpage where I share a little about myself.</p>
+    <header>
+        <h1>Welcome to My Personal Page</h1>
+    </header>
+
     <h2>Interesting Facts About Me</h2>
-    <ul>
-        <li>I love coding and learning new technologies!</li>
-        <li>I enjoy playing soccer during my free time.</li>
-        <li>I'm currently pursuing an associate degree in computer science at BMCC.</li>
+    <ul style="list-style: none; padding: 0;">
+        <li>I love soccer and programming.</li>
+        <li>I’m studying Computer Science at BMCC.</li>
+        <li>My dream job is to work in Cybersecurity.</li>
+        <li>I enjoy learning new coding languages.</li>
     </ul>
 
-    <p>Click the link below to know more about my university:</p>
-    <a href="myUniversity.html">My University</a>
-    
-    <h2>Resume</h2>
-    <p>Click the link below to view my resume:</p>
-    <a href="resume.html">View Resume</a>
+    <!--  -->
+    <img src="WhatsApp Image 2025-03-24 at 00.02.29_a06b2be6.jpg" alt="Yvon Tsafack photo">
+
+    <!-- 🌐 Navigation -->
+    <nav>
+        <p><a href="myUniversity.html">My University</a> | <a href="resume.html">My Resume</a></p>
+    </nav>
 </body>
 </html>
